--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
             <nav class="main-nav">
                 <a href="#" class="logo">PM trans Ostrov s.r.o.</a>
                 <ul class="nav-links">
-                    <li><a href="#logistika">Logistika</a></li>
-                    <li><a href="#servis">Servis</a></li>
-                    <li><a href="#odtah">Odtah</a></li>
-                    <li><a href="#prestavby">Přestavby</a></li>
-                    <li><a href="#kontakty">Kontakty</a></li>
+                    <li><a href="#logistika" alt="Logistika">Logistika</a></li>
+                    <li><a href="#servis" alt="Servis">Servis</a></li>
+                    <li><a href="#odtah" alt="Odtah">Odtah</a></li>
+                    <li><a href="#prestavby" alt="Prestavby">Přestavby</a></li>
+                    <li><a href="#kontakty" alt="Kontakty">Kontakty</a></li>
+                    <li><a href="#address-map-section" alt="Provozovna" class="sm-only">Provozovna</a></li>
                 </ul>
+                <div id="menu-backdrop"></div>
+                <button class="hamburger" aria-label="Toggle navigation">
+                    <img src="./assets/hamburger-icon.svg" alt="Menu" />
+                </button>
             </nav>
         </div>
     </header>
@@ -101,7 +106,7 @@
             </div>
         </section>
         
-        <section class="address-map-section">
+        <section id="address-map-section">
             <h2 class="section-title">Naše provozovna</h2>
             <div class="container address-map-grid">
                 <div class="address-details-container">
