--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
@@ -42,7 +42,7 @@
                     <p>V logistice se naše firma pohybuje už 25 let. Díky tomu nabízíme efektivní komunikaci pro zajištění vašich potřeb a rychlá a kreativní řešení. Na naše řidiče je vždy spolehnutí.</p>
                 </div>
                 <div class="service-icon-container">
-                    <img src="./assets/section_1.webp" alt="Logistika" />
+                    <img height="450" width="600" src="./assets/section_1.webp" alt="Logistika" />
                 </div>
             </div>
         </section>
@@ -50,7 +50,7 @@
         <section id="servis" class="service-section alt-bg">
             <div class="container service-grid">
                   <div class="service-icon-container">
-                    <img src="./assets/section_2.webp" alt="Servis" />
+                    <img height="450" width="600" src="./assets/section_2.webp" alt="Servis" />
                 </div>
                 <div class="service-text">
                     <h2 class="section-title section-title--left">Servis vozidel</h2>
@@ -66,7 +66,7 @@
                     <p>Dále pro Vás provozujeme odtahovou službu. Odtáhneme Vám osobní, nákladní automobily, lesní techniku, traktory a vlastně cokoliv do 18 tun. Máme pro Vás i hydraulickou ruku 800 kg na 9 metrů.</p>
                 </div>
                 <div class="service-icon-container">
-                    <img src="./assets/section_3.webp" alt="Odtahova Sluzba" defer />
+                    <img height="450" width="600" src="./assets/section_3.webp" alt="Odtahova Sluzba" defer />
                 </div>
             </div>
         </section>
@@ -74,7 +74,7 @@
           <section id="prestavby" class="service-section alt-bg">
             <div class="container service-grid">
                   <div class="service-icon-container">
-                    <img src="./assets/section_4.webp" alt="Prestavby" defer />
+                    <img height="450" width="600" src="./assets/section_4.webp" alt="Prestavby" defer />
                 </div>
                 <div class="service-text">
                     <h2 class="section-title section-title--left">Přestavby vozidel</h2>
@@ -123,8 +123,7 @@
                         width="600" 
                         height="450" 
                         style="border:0;" 
-                        allowfullscreen="" 
-                        loading="lazy" 
+                        allowfullscreen=""
                         referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
