--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PM trans Ostrov s.r.o. - Logistika a Servis</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
   </head>
@@ -27,13 +23,15 @@
                 </ul>
                 <div id="menu-backdrop"></div>
                 <button class="hamburger" aria-label="Toggle navigation">
-                    <img src="./assets/hamburger-icon.svg" alt="Menu" />
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor">
+                      <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
+                    </svg>
                 </button>
             </nav>
         </div>
     </header>
 
-    <main>
+    <main id="main-content">
         <section id="logistika" class="service-section">
             <div class="container service-grid">
                 <div class="service-text">
