--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
             </nav>
         </div>
     </header>
-
     <main id="main-content">
+        <section class="hero-section">
+            <div class="container">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum assumenda soluta, maxime vero laudantium quidem provident ratione omnis pariatur optio accusamus ad eum sequi quos recusandae cupiditate consectetur incidunt voluptatibus.</p>
+            </div>
+        </section>
         <section id="logistika" class="service-section">
             <div class="container service-grid">
                 <div class="service-text">
@@ -56,7 +60,6 @@
                 </div>
             </div>
         </section>
-
         <section id="odtah" class="service-section">
             <div class="container service-grid">
                 <div class="service-text">
@@ -81,7 +84,7 @@
             </div>
         </section>
 
-        <section id="kontakty" class="contact-section">
+        <section id="kontakty" class="contact-section transparent-subtle">
             <div class="container">
                 <h2 class="section-title">Kontakty</h2>
                 <div class="contact-grid">
@@ -97,14 +100,14 @@
                     </div>
                     <div class="contact-card">
                         <h3>Skladování</h3>
-                        <p class="contact-name">Jaroslav Černík</p>
-                        <p class="contact-detail"><strong>Tel:</strong> 775 334 015</p>
+                        <p class="contact-name">Pavel Černík </p>
+                        <p class="contact-detail"><strong>Tel:</strong> 775 334 004</p>
                     </div>
                 </div>
             </div>
         </section>
         
-        <section id="address-map-section">
+        <section id="address-map-section" class="transparent-subtle">
             <h2 class="section-title">Naše provozovna</h2>
             <div class="container address-map-grid">
                 <div class="address-details-container">
