--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PM trans Ostrov s.r.o. - Logistika a Servis</title>
+    
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
 
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
@@ -130,7 +133,58 @@
                 </div>
             </div>
         </section>
-
+        <section id="gallery" class="gallery-section transparent-subtle">
+            <div class="container">
+                <h2 class="section-title">Galerie</h2>
+                <div class="gallery-grid">
+                    <a href="./assets/galerie/galerie_full_1.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_1.webp" alt="Popis obrazku 1">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_2.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_2.webp" alt="Popis obrazku 2">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_3.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_3.webp" alt="Popis obrazku 3">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_4.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_4.webp" alt="Popis obrazku 4">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_5.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_5.webp" alt="Popis obrazku 5">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_6.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_6.webp" alt="Popis obrazku 6">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_7.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_7.webp" alt="Popis obrazku 7">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_8.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_8.webp" alt="Popis obrazku 8">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_9.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_9.webp" alt="Popis obrazku 9">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_10.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_10.webp" alt="Popis obrazku 10">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_11.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_11.webp" alt="Popis obrazku 11">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_12.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_12.webp" alt="Popis obrazku 12">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_13.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_13.webp" alt="Popis obrazku 13">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_14.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_14.webp" alt="Popis obrazku 14">
+                    </a>
+                    <a href="./assets/galerie/galerie_full_15.webp" class="gallery-item">
+                        <img src="./assets/galerie/galerie_thumb_15.webp" alt="Popis obrazku 15">
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer class="main-footer-bottom">
