removed paralax and added new herobanner

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     <li><a href="#odtah" alt="Odtah">Odtah</a></li>
                     <li><a href="#prestavby" alt="Prestavby">Přestavby</a></li>
                     <li><a href="#kontakty" alt="Kontakty">Kontakty</a></li>
-                    <li><a href="#address-map-section" alt="Provozovna" class="sm-only">Provozovna</a></li>
+                    <li class="sm-only"><a href="#address-map-section" alt="Provozovna">Provozovna</a></li>
+                    <li class="sm-only"><a href="#gallery" alt="Galerie">Galerie</a></li>
                 </ul>
                 <div id="menu-backdrop"></div>
                 <button class="hamburger" aria-label="Toggle navigation">
@@ -36,7 +37,7 @@
     <main id="main-content">
         <section class="hero-section">
             <div class="container">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum assumenda soluta, maxime vero laudantium quidem provident ratione omnis pariatur optio accusamus ad eum sequi quos recusandae cupiditate consectetur incidunt voluptatibus.</p>
+                <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum assumenda soluta, maxime vero laudantium quidem provident ratione omnis pariatur optio accusamus ad eum sequi quos recusandae cupiditate consectetur incidunt voluptatibus.</p>
             </div>
         </section>
         <section id="logistika" class="service-section">
